<resources>
    <string name="app_name">AppMaree</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="accueil_fragment_label">Accueil Fragment</string>
    <string name="horaires_fragment_label">Horaires Fragment</string>
    <string name="parametre_fragment_label">Parametre Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="nom_port">PORT-DIELETTE</string>

    <!-- texte de la page d'accueil -->
    <string name="text_accueil">"Les données affichées sur cette application sont issues du guide imprimé et distribué gratuitement. Elles ne sont qu\'indicatives.\n\n
        Certaines ont été fournies par le SHOM, d\'autres sont calculées. Les horaires sont en HEURE LEGALE et ne prennent pas en compte les variations liées à la météorologie ou à des effets locaux particuliers. En aucun cas, elles ne peuvent être utilisées pour la navigation maritime.\n\n
        L\'association et les auteurs de cette application ne peuvent être tenus responsables d\'incidents ou d\'accidents engendrés par la lecture  des informations de cette application.\n\n
        En cliquant sur OK vous affirmez avoir compris cet avertissement.\n\n
        Autorisation SHOM 2019-2021"
    </string>
    <string name="bouton_accueil">✓</string>
    <string name="text_condition_utilisation">"\n\nConditions d'utilisations"</string>
    <string name="text_checkbox_condition_utilisation">"J'accepte les conditions d'utilisation"</string>

    <string name="popup_fermer_label">Fermer</string>

    <!-- texte de la navbar -->
    <string name="horaires">Horaires</string>
    <string name="parametres">Paramètres</string>
    <string name="documentation">Documentations</string>
    <string name="services">Services</string>
    <string name="a_propos">"À propos"</string>
    <string name="tailles_autorisées">"Tailles autorisées</string>
    <string name="tirantdeau">"Tirant d'eau :"</string>


    <!-- texte documentation -->
    <string name="DocuParagraphe1">
        La forme de base de visualisation des marées est :\n
    </string>
    <string name="DocuParagraphe2">
        \nLa première ligne avec 79 et 77 indiquent les coefficients de marée des pleines mers. \n\nLa couleur bleu indique les horaires de pleine mer et la couleur jaune ceux de basse mer.\n
    </string>
    <string name="DocuParagraphe3">
       "\nLes horaires suivant nous sont fournit par le SHOM, celui en vert indique l'horaire d'ouverture et en rouge la fermeture.\n"
    </string>
    <string name="DocuParagraphe4">
        "\nPrenons maintenant le cas ou l'on veut : \n
        • 2 mètres d'eau sans pied de pilote au dessus de la porte ouverte (la saisie se fait dans les paramètres)
        • l'affichage des hauteurs d'eau à basse et pleine mer \n\nOn a alors l'affichage suivant : "
    </string>
    <string name="DocuParagraphe5">
        \nla ligne suivante :
    </string>
    <string name="DocuParagraphe6">
        "indiquent les hauteurs d'eau correspondant à la pleine mer ou à la basse mer. \n\nLa ligne suivante : "
    </string>
    <string name="DocuParagraphe7">
        "indique l'heure à partir de laquelle la hauteur de l'eau est égale ou supérieure à 2 metres (en vert) et inférieure à 2 metres (en rouge). Ces horaires sont approximés et ne sont pas des données en provenance du SHOM. \n\nLa ligne :"
    </string>
    <string name="DocuParagraphe8">
        "indique l'heure donnée par le SHOM à partir de laquelle la porte ouvre (avec la parenthèse ouvrante) et ferme (avec la parenthèse fermante).\n"
    </string>

    <string name="DescriptionService">"L\'association des plaisanciers de Port Dielette vous présente la liste de ses partenaires pour l\'édition de l'annuaire des marées.\n\n"
    </string>

    <!-- texte de la page à propos -->

    <string name="a_propo_titre1">
        "  Titre numéro 1     "
    </string>
    <string name="a_propo_paragraphe1">
        " texttextextextextexttexttextextextextexttexttextextextextexttexttextextextextext\n
        texttextextextextexttexttextextextextexttexttextextextextexttexttextextextextexttexttextextextextext\n
        texttextextextextexttexttextextextextexttexttextextextextexttexttextextextextext\n
        texttextextextextexttexttextextextextexttexttextextextextexttexttextextextextext\n
        texttextextextextexttexttextextextextext\ntexttextextextextexttexttextextextextext\n\n
        texttextextextextexttexttextextextextext"
    </string>
    <string name="a_propo_titre2">
        "  Titre numéro 2     "
    </string>
    <string name="a_propo_paragraphe2">
        " texttextextextextexttexttextextextextexttexttextextextextexttexttextextextextext\n
        texttextextextextexttexttextextextextexttexttextextextextexttexttextextextextexttexttextextextextext\n
        texttextextextextexttexttextextextextexttexttextextextextexttexttextextextextext\n\n\n
        texttextextextextexttexttextextextextexttexttextextextextexttexttextextextextext\n\n
        texttextextextextexttexttextextextextext\ntexttextextextextexttexttextextextextext\n\n\n
        texttextextextextexttexttextextextextext"
    </string>
    <string name="a_propo_titre3">
        "  Titre numéro 3     "
    </string>
    <string name="a_propo_paragraphe3">
        " texttextextextextexttexttextextextextexttexttextextextextexttexttextextextextext\n
        texttextextextextexttexttextextextextexttexttextextextextexttexttextextextextexttexttextextextextext\n
        texttextextextextexttexttextextextextexttexttextextextextexttexttextextextextext\n\n\n
        texttextextextextexttexttextextextextexttexttextextextextexttexttextextextextext\n\n
        texttextextextextexttexttextextextextext\ntexttextextextextexttexttextextextextext\n\n\n
        texttextextextextexttexttextextextextext"
    </string>

    <!-- texte de la page urgence -->
    <string name="urgence1">"Type d'urgence:\n\tHomme à la mer\n\tInciendie/explosion\n\tVoie d'eau\n\tAbordage\n\tNavire désemparé et à la dérive\n\tÉchouement\n\tChavirement\n\tNavire en train de sombrer\n\tAbandon du navire\n"</string>
    <string name="bouton_urgence1">"May-Day"</string>
    <string name="text_urgence1">"Mayday – Mayday – Mayday\nici le bateau [type et nom de l’embarcation];\nQui se signale [nature du sinistre];\nÀ la position [position GPS ou azimut/distance d’un point remarquable];\n[Nombre] de personnes à bord;\nIci le bateau [type et nom de l’embarcation] -\nterminé."</string>

    <string name="urgence2">"Type d'urgence:\n\tAvarie de propulsion\n\tAvarie de barre\n\tHélice ou safran engagé\n\tDémâtage\n\tDemanded'avis medical\n"</string>
    <string name="bouton_urgence2">"Pan-Pan"</string>
    <string name="text_urgence2">"Pan  Pan - Pan  Pan - Pan  Pan\nici le bateau [type et nom de l’embarcation];\nQui se signale [nature du sinistre];\nÀ la position [position GPS ou azimut/distance d’un point remarquable]; [\nNombre] de personnes à bord;\nIci le bateau [type et nom de l’embarcation] - terminé."</string>

</resources>