<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/param"
            android:title="@string/parametres" />
        <item
            android:id="@+id/horraires"
            android:title="@string/horaires" />
        <item
            android:id="@+id/documentations"
            android:title="@string/documentation" />
        <item
            android:id="@+id/services"
            android:title="@string/services" />
        <item
            android:id="@+id/apropos"
            android:title="@string/a_propos" />
        <item
            android:id="@+id/taillesautorisees"
            android:title="@string/tailles_autorisées" />
    </group>
</menu>