<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <TextView
        android:id="@+id/aproposTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="À PROPOS"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/colorTitre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_weight="1"/>

    <ScrollView
        android:paddingTop="50dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/a_propo_titre1"
                android:textSize="@dimen/tailleTitre"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/a_propo_paragraphe1"
                android:textSize="@dimen/taillePolice"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/a_propo_titre2"
                android:textSize="@dimen/tailleTitre"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/a_propo_paragraphe2"
                android:textSize="@dimen/taillePolice"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/a_propo_titre3"
                android:textSize="@dimen/tailleTitre"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:paddingBottom="70dp"
                android:text="@string/a_propo_paragraphe3"
                android:textSize="@dimen/taillePolice"/>
        </LinearLayout>

    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>