<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:paddingTop="50dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/taillepolicedocu"
                android:text="@string/DocuParagraphe1"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/taillepolicedocu"
                android:text="@string/DocuParagraphe2"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/taillepolicedocu"
                android:text="@string/DocuParagraphe3"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/taillepolicedocu"
                android:text="@string/DocuParagraphe4"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/taillepolicedocu"
                android:text="@string/DocuParagraphe5"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/taillepolicedocu"
                android:text="@string/DocuParagraphe6"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/taillepolicedocu"
                android:text="@string/DocuParagraphe7"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/taillepolicedocu"
                android:text="@string/DocuParagraphe8"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>


    </ScrollView>

    <TextView
        android:id="@+id/documentationsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="DOCUMENTATION"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/colorTitre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>