<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/AccueilFragment">

    <fragment
        android:id="@+id/AccueilFragment"
        android:name="com.example.appmaree.AccueilFragment"
        android:label="@string/accueil_fragment_label"
        tools:layout="@layout/fragment_accueil">
        <action
            android:id="@+id/action_AccueilFragment_to_HorairesFragment"
            app:destination="@id/HorairesFragment" />
    </fragment>
    <fragment
        android:id="@+id/HorairesFragment"
        android:name="com.example.appmaree.HorairesFragment"
        android:label="@string/horaires_fragment_label"
        tools:layout="@layout/fragment_horaires">
        <action
            android:id="@+id/action_HorairesFragment_to_ParametreFragment"
            app:destination="@id/ParametreFragment" />
        <action
            android:id="@+id/action_HorairesFragment_to_securiteFragment"
            app:destination="@id/securiteFragment" />
    </fragment>
    <fragment
        android:id="@+id/ParametreFragment"
        android:name="com.example.appmaree.ParametreFragment"
        android:label="@string/parametre_fragment_label" >
        <action
            android:id="@+id/action_ParametreFragment_to_HorairesFragment"
            app:destination="@id/HorairesFragment" />
    </fragment>
    <fragment
        android:id="@+id/securiteFragment"
        android:name="com.example.appmaree.SecuriteFragment"
        android:label="SecuriteFragment" />
</navigation>